--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ body {
   overflow: hidden;
   margin: 0;
   padding: 0;
+  background-color: black;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
